feat: implement role-based authentication in GraphQLAuthInterceptor for guest and registered users